Fixing aos header clipping on ios

--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -37,12 +37,9 @@ header{
 
 [data-aos] {
     pointer-events: none;
-}
-.aos-animate {
-    pointer-events: auto;
-}
-.aos-init[data-aos][data-aos].aos-animate {
-    transform: unset;
+    &.aos-animate {
+        pointer-events: auto;
+    }
 }
 
 .divider-line{
